# robot-simulator

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  dockerRun.sh  win.patch  winSetup.md
src/: encoderWheelSensor.cpp  encoderWheelSensor.hpp  irProximitySensor.cpp  irProximitySensor.hpp  jsonrpctcpserver.cpp  jsonrpctcpserver.hpp  lineTrackSensor.cpp  lineTrackSensor.hpp  main.cpp  map.cpp  map.hpp  robot.cpp  robot.hpp  robotCommand.cpp  robotCommand.hpp  sensor.hpp  speedSensor.cpp  speedSensor.hpp  switchSensor.cpp  switchSensor.hpp  ultrasonicSensor.cpp  ultrasonicSensor.hpp  ultrasoundSensor.cpp  ultrasoundSensor.hpp
src/notifier/: encoderWheelSensorsNotifier.hpp  irProximitySensorsNotifier.hpp  lineTrackSensorsNotifier.cpp  lineTrackSensorsNotifier.hpp  sensorsNotifier.hpp  speedSensorsNotifier.hpp  switchSensorsNotifier.hpp  ultrasonicSensorsNotifier.hpp  ultrasoundSensorsNotifier.hpp
